OAuth Security Config fix